[gd_scene load_steps=4 format=2]

[ext_resource path="res://controls/CompareKeyboard.gd" type="Script" id=1]
[ext_resource path="res://Montserrat-Medium.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 144
font_data = ExtResource( 2 )

[node name="CompareKeyboard" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 640, 280 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 270, 300 )
custom_constants/separation = 20

[node name="LessThanButton" type="Button" parent="HBoxContainer"]
margin_right = 200.0
margin_bottom = 240.0
rect_min_size = Vector2( 200, 240 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "<"
flat = true

[node name="EqualsButton" type="Button" parent="HBoxContainer"]
margin_left = 220.0
margin_right = 420.0
margin_bottom = 240.0
rect_min_size = Vector2( 200, 240 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "="
flat = true

[node name="GreaterThanButton" type="Button" parent="HBoxContainer"]
margin_left = 440.0
margin_right = 640.0
margin_bottom = 240.0
rect_min_size = Vector2( 200, 240 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = ">"
flat = true
